# squash

./: .gitattributes  .travis.yml  WORKSPACE
scripts/: benchmark.py  check.py  utility.py
squash/: BUILD.bazel  copts.bzl
squash/base/: BUILD.bazel  command_line.cc  command_line.h  logging.cc  logging.h  macros.h  optional.h
squash/base/memory/: ptr_util.h
squash/base/numerics/: checked_math.h  safe_conversions.h
squash/base/test/: gtest_util.h
squash/testdata/: BUILD.bazel
squash/testdata/patch_fuzzer/: empty.zuc
squash/zucchini/: BUILD.bazel  abs32_utils.cc  abs32_utils.h  abs32_utils_unittest.cc  address_translator.cc  address_translator.h  address_translator_unittest.cc  algorithm.h  algorithm_unittest.cc  binary_data_histogram.cc  binary_data_histogram.h  binary_data_histogram_unittest.cc  buffer_sink.cc  buffer_sink.h  buffer_sink_unittest.cc  buffer_source.cc  buffer_source.h  buffer_source_unittest.cc  buffer_view.h  buffer_view_unittest.cc  crc32.cc  crc32_unittest.cc  disassembler.cc  disassembler.h  disassembler_no_op.cc  disassembler_no_op.h  disassembler_win32.cc  disassembler_win32.h  element_detection.cc  element_detection.h  element_detection_unittest.cc  encoded_view.cc  encoded_view.h  encoded_view_unittest.cc  equivalence_map.cc  equivalence_map.h  equivalence_map_unittest.cc  image_index.cc  image_index.h  image_index_unittest.cc  (+59 more)
tool/: bazel_0.9.0-linux-x86_64.deb.sha256
